--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="full-height full-width overflow-hidden">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -7,7 +7,7 @@
   </head>
   <body
     data-sveltekit-preload-data="hover"
-    class="surface-char text-color-light min-height-100 min-width-100 overflow-hidden"
+    class="grid surface-char text-color-light overflow-hidden"
   >
     <div style="display: contents">%sveltekit.body%</div>
   </body>
