--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
   </head>
   <body
     data-sveltekit-preload-data="hover"
-    class="grid surface-char text-color-light overflow-hidden"
+    class="grid surface-char text-color-light overflow-hidden letter-spacing-1"
   >
     <div style="display: contents">%sveltekit.body%</div>
   </body>
